--- a/gaming.css
+++ b/gaming.css
@@ -62,6 +62,7 @@ body, html {
     margin-right: 5px;
 }
 
+/* Navigation Bar */
 
 header {
     background: linear-gradient(to right, #03A9F4, #FFC107);
@@ -76,7 +77,6 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 30px;
 }
 
 .nav-brand {
@@ -127,6 +127,8 @@ header {
     margin-left: 20px;
 }
 
+
+
 .nav-links a {
     color: #fff;
     text-decoration: none;
@@ -136,7 +138,6 @@ header {
 .nav-links a:hover {
     color: #ccc;
 }
-
 
 
 .product-card {
