--- a/speaker.css
+++ b/speaker.css
@@ -63,6 +63,9 @@ body, html {
 }
 
 
+
+/* Navigation Bar */
+
 header {
     background: linear-gradient(to right, #03A9F4, #FFC107);
     color: #fff;
@@ -76,7 +79,6 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 30px;
 }
 
 .nav-brand {
@@ -126,6 +128,8 @@ header {
 .nav-links li {
     margin-left: 20px;
 }
+
+
 
 .nav-links a {
     color: #fff;
